<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item android:title="Boys">
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_him" />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_dad" />
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_brother" />
        </item>
    </group>



<item android:title="Girls">
        <menu>
            <item
                android:id="@+id/nav_her"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_her" />
            <item
                android:id="@+id/nav_mom"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_mom" />
            <item
                android:id="@+id/nav_sister"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_sister" />
        </menu>
    </item>

</menu>
