<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kalvinkao.randomgiftideas.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_him"
        android:name="com.kalvinkao.randomgiftideas.ui.gallery.GalleryFragment"
        android:label="@string/menu_him"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/menu_dad"
        android:name="com.kalvinkao.randomgiftideas.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_dad"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_brother"
        android:name="com.kalvinkao.randomgiftideas.ui.tools.ToolsFragment"
        android:label="@string/menu_brother"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_her"
        android:name="com.kalvinkao.randomgiftideas.ui.share.ShareFragment"
        android:label="@string/menu_her"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_sister"
        android:name="com.kalvinkao.randomgiftideas.ui.send.SendFragment"
        android:label="@string/menu_sister"
        tools:layout="@layout/fragment_send" />
</navigation>