<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_home"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_boy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/boys"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_himHome"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/for_him" />

    <Button
        android:id="@+id/btn_dadHome"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/for_dad" />

    <Button
        android:id="@+id/btn_broHome"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/for_brother" />

    <TextView
        android:id="@+id/text_blank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_girl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/girls"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_herHome"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/for_her" />

    <Button
        android:id="@+id/btn_momHome"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/for_mom" />

    <Button
        android:id="@+id/btn_sisHome"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/for_sister" />

</LinearLayout>