<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_bro"
        android:layout_width="401dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/randomize_your_gift"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/random_gift_bro"
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:layout_above="@+id/giftImage"
        android:layout_below="@+id/text_bro"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/giftImage"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:layout_above="@+id/btn_bro"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/gift_box"
        app:srcCompat="@drawable/gift" />

    <Button
        android:id="@+id/btn_bro"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="54dp"
        android:text="@string/button_random"
        android:textSize="30sp" />

</RelativeLayout>